Add unit tests for Islamic risk services
- Implement tests for IslamicCollateralService to validate collateral registration and coverage calculations.
- Create tests for IslamicCreditRiskDashboardService to ensure accurate portfolio overview calculations.
- Develop tests for IslamicCreditScoringService to assess credit scoring logic and validation of score models.
- Add tests for IslamicEclService to verify ECL calculations for different contract types.
- Introduce tests for IslamicRiskClassificationService to confirm correct classification based on DPD and collateral coverage.